--- a/css/estilos.css
+++ b/css/estilos.css
@@ -320,6 +320,10 @@ h1 {
     color: #e71c1c;
 }
 
+.carousel__listaProyects iframe{
+    margin-top:10px;
+    border-radius:15px;
+}
 
 .carousel__elemento,
 .carousel__elementoProjects {
