--- a/css/estilos.css
+++ b/css/estilos.css
@@ -320,7 +320,7 @@ h1 {
     color: #e71c1c;
 }
 
-.carousel__listaProyects iframe{
+.carousel__elementoProjects iframe{
     margin-top:10px;
     border-radius:15px;
 }
